add informative error message for fid

--- a/example.ipynb
+++ b/example.ipynb
@@ -15,10 +15,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from chemtbd.agilent import agilent_reader"
@@ -33,13 +31,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "agi = agilent_reader.Agilent('data/FA13.D')"
+    "agi = agilent_reader.Agilent('data/test2/FA13.D')"
    ]
   },
   {
@@ -59,8 +57,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -70,8 +70,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>data_tic</th>\n",
-       "      <th>data_tme</th>\n",
+       "      <th>tic_data</th>\n",
+       "      <th>tme_data</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -105,7 +105,7 @@
        "</div>"
       ],
       "text/plain": [
-       "    data_tic  data_tme\n",
+       "    tic_data  tme_data\n",
        "0  3213002.0  3.086750\n",
        "1  2360959.0  3.092483\n",
        "2  1791725.0  3.098200\n",
@@ -113,7 +113,7 @@
        "4  1223875.0  3.109650"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,186 +134,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>tic_header=</th>\n",
-       "      <th>tic_peak</th>\n",
-       "      <th>tic_rt</th>\n",
-       "      <th>tic_first</th>\n",
-       "      <th>tic_max</th>\n",
-       "      <th>tic_last</th>\n",
-       "      <th>tic_pk_ty</th>\n",
-       "      <th>tic_height</th>\n",
-       "      <th>tic_area</th>\n",
-       "      <th>tic_pct_max</th>\n",
-       "      <th>tic_pct_total</th>\n",
-       "      <th>lib_Header=</th>\n",
-       "      <th>lib_pk</th>\n",
-       "      <th>lib_rt</th>\n",
-       "      <th>lib_pct_area</th>\n",
-       "      <th>lib_library_id</th>\n",
-       "      <th>lib_ref</th>\n",
-       "      <th>lib_cas</th>\n",
-       "      <th>lib_qual</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1=</td>\n",
-       "      <td>1</td>\n",
-       "      <td>9.867</td>\n",
-       "      <td>1174</td>\n",
-       "      <td>1186</td>\n",
-       "      <td>1219</td>\n",
-       "      <td>rVB</td>\n",
-       "      <td>88219</td>\n",
-       "      <td>251790</td>\n",
-       "      <td>4.16</td>\n",
-       "      <td>1.732</td>\n",
-       "      <td>1=</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>9.8673</td>\n",
-       "      <td>1.7321</td>\n",
-       "      <td>Methyl myristate</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>000000-00-0</td>\n",
-       "      <td>97.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2=</td>\n",
-       "      <td>2</td>\n",
-       "      <td>10.829</td>\n",
-       "      <td>1349</td>\n",
-       "      <td>1354</td>\n",
-       "      <td>1364</td>\n",
-       "      <td>rVV</td>\n",
-       "      <td>956983</td>\n",
-       "      <td>1330700</td>\n",
-       "      <td>22.00</td>\n",
-       "      <td>9.154</td>\n",
-       "      <td>2=</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>10.9316</td>\n",
-       "      <td>13.5256</td>\n",
-       "      <td>Methyl palmitoleate</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>000000-00-0</td>\n",
-       "      <td>99.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3=</td>\n",
-       "      <td>3</td>\n",
-       "      <td>10.932</td>\n",
-       "      <td>1364</td>\n",
-       "      <td>1372</td>\n",
-       "      <td>1386</td>\n",
-       "      <td>rVV</td>\n",
-       "      <td>1266157</td>\n",
-       "      <td>1966188</td>\n",
-       "      <td>32.50</td>\n",
-       "      <td>13.526</td>\n",
-       "      <td>3=</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>11.0460</td>\n",
-       "      <td>41.6107</td>\n",
-       "      <td>Methyl palmitate</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>000000-00-0</td>\n",
-       "      <td>97.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4=</td>\n",
-       "      <td>4</td>\n",
-       "      <td>11.046</td>\n",
-       "      <td>1386</td>\n",
-       "      <td>1392</td>\n",
-       "      <td>1419</td>\n",
-       "      <td>rVB</td>\n",
-       "      <td>4142556</td>\n",
-       "      <td>6048885</td>\n",
-       "      <td>100.00</td>\n",
-       "      <td>41.611</td>\n",
-       "      <td>4=</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>12.1732</td>\n",
-       "      <td>29.3428</td>\n",
-       "      <td>cis-9-Oleic methyl ester</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>000000-00-0</td>\n",
-       "      <td>94.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5=</td>\n",
-       "      <td>5</td>\n",
-       "      <td>11.344</td>\n",
-       "      <td>1438</td>\n",
-       "      <td>1444</td>\n",
-       "      <td>1459</td>\n",
-       "      <td>rBV</td>\n",
-       "      <td>117494</td>\n",
-       "      <td>191196</td>\n",
-       "      <td>3.16</td>\n",
-       "      <td>1.315</td>\n",
-       "      <td>5=</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>12.3220</td>\n",
-       "      <td>1.5754</td>\n",
-       "      <td>Methyl stearate</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>000000-00-0</td>\n",
-       "      <td>98.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  tic_header=  tic_peak  tic_rt  tic_first  tic_max  tic_last tic_pk_ty  \\\n",
-       "0          1=         1   9.867       1174     1186      1219      rVB    \n",
-       "1          2=         2  10.829       1349     1354      1364      rVV    \n",
-       "2          3=         3  10.932       1364     1372      1386      rVV    \n",
-       "3          4=         4  11.046       1386     1392      1419      rVB    \n",
-       "4          5=         5  11.344       1438     1444      1459      rBV    \n",
-       "\n",
-       "   tic_height  tic_area  tic_pct_max  tic_pct_total lib_Header=  lib_pk  \\\n",
-       "0       88219    251790         4.16          1.732          1=     1.0   \n",
-       "1      956983   1330700        22.00          9.154          2=     3.0   \n",
-       "2     1266157   1966188        32.50         13.526          3=     4.0   \n",
-       "3     4142556   6048885       100.00         41.611          4=     7.0   \n",
-       "4      117494    191196         3.16          1.315          5=     8.0   \n",
-       "\n",
-       "    lib_rt  lib_pct_area            lib_library_id  lib_ref      lib_cas  \\\n",
-       "0   9.8673        1.7321          Methyl myristate      6.0  000000-00-0   \n",
-       "1  10.9316       13.5256       Methyl palmitoleate      9.0  000000-00-0   \n",
-       "2  11.0460       41.6107          Methyl palmitate     10.0  000000-00-0   \n",
-       "3  12.1732       29.3428  cis-9-Oleic methyl ester     33.0  000000-00-0   \n",
-       "4  12.3220        1.5754           Methyl stearate     19.0  000000-00-0   \n",
-       "\n",
-       "   lib_qual  \n",
-       "0      97.0  \n",
-       "1      99.0  \n",
-       "2      97.0  \n",
-       "3      94.0  \n",
-       "4      98.0  "
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "Exception",
+     "evalue": "data is jacked: ['Header=', 'PK', 'RT', 'Area Pct', 'Library/ID', 'Ref', 'CAS', 'Qual', '', '', '']",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-f621284b751e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mresults\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0magi\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mresults\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mresults\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/blakeboswell/projects/audere/chem/chemtbd/agilent/gcms_result.py\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    134\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__call__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    135\u001b[0m         \u001b[0;34m''' shortcut to data '''\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 136\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m/Users/blakeboswell/projects/audere/chem/chemtbd/agilent/gcms_result.py\u001b[0m in \u001b[0;36mdata\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    129\u001b[0m         ''' \n\u001b[1;32m    130\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_data\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 131\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_build_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    132\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    133\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/blakeboswell/projects/audere/chem/chemtbd/agilent/gcms_result.py\u001b[0m in \u001b[0;36m_build_data\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    121\u001b[0m         '''\n\u001b[1;32m    122\u001b[0m         \u001b[0mbuild\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mtbl\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_dataframe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtbl\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtbl\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 123\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbuild\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtables\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    124\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    125\u001b[0m     \u001b[0;34m@\u001b[0m\u001b[0mproperty\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/blakeboswell/miniconda3/envs/chemtool/lib/python3.6/site-packages/pandas/tools/merge.py\u001b[0m in \u001b[0;36mconcat\u001b[0;34m(objs, axis, join, join_axes, ignore_index, keys, levels, names, verify_integrity, copy)\u001b[0m\n\u001b[1;32m   1449\u001b[0m                        \u001b[0mkeys\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlevels\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlevels\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnames\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnames\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1450\u001b[0m                        \u001b[0mverify_integrity\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mverify_integrity\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1451\u001b[0;31m                        copy=copy)\n\u001b[0m\u001b[1;32m   1452\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mop\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_result\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1453\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/blakeboswell/miniconda3/envs/chemtool/lib/python3.6/site-packages/pandas/tools/merge.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, objs, axis, join, join_axes, keys, levels, names, ignore_index, verify_integrity, copy)\u001b[0m\n\u001b[1;32m   1479\u001b[0m             \u001b[0mobjs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mobjs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mk\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mkeys\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1480\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1481\u001b[0;31m             \u001b[0mobjs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobjs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1482\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1483\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobjs\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/blakeboswell/projects/audere/chem/chemtbd/agilent/gcms_result.py\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(tbl)\u001b[0m\n\u001b[1;32m    120\u001b[0m         ''' convert tables to pandas dataframe\n\u001b[1;32m    121\u001b[0m         '''\n\u001b[0;32m--> 122\u001b[0;31m         \u001b[0mbuild\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;32mlambda\u001b[0m \u001b[0mtbl\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mas_dataframe\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtbl\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtbl\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    123\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbuild\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtables\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    124\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/blakeboswell/projects/audere/chem/chemtbd/agilent/gcms_base.py\u001b[0m in \u001b[0;36mas_dataframe\u001b[0;34m(self, header, data)\u001b[0m\n\u001b[1;32m     53\u001b[0m             \u001b[0mpandas\u001b[0m \u001b[0mDataFrame\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mappropriate\u001b[0m \u001b[0mnames\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mtypes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     54\u001b[0m         '''\n\u001b[0;32m---> 55\u001b[0;31m         \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcolstr\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcolumn_structure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mheader\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcol_keys\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     56\u001b[0m         return (pd.DataFrame(data, columns=pd_columns(header, colstr))\n\u001b[1;32m     57\u001b[0m                 \u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_numeric\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merrors\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'ignore'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/Users/blakeboswell/projects/audere/chem/chemtbd/agilent/gcms_base.py\u001b[0m in \u001b[0;36mcolumn_structure\u001b[0;34m(header, keys)\u001b[0m\n\u001b[1;32m     30\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mval\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m     raise Exception(\n\u001b[0;32m---> 32\u001b[0;31m         \u001b[0;34m'data is jacked: {}'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mheader\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     33\u001b[0m     )\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mException\u001b[0m: data is jacked: ['Header=', 'PK', 'RT', 'Area Pct', 'Library/ID', 'Ref', 'CAS', 'Qual', '', '', '']"
+     ]
     }
    ],
    "source": [
@@ -325,7 +168,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Go to town plotting and analyzing. \n",
+    "If you ran the above on Go to town plotting and analyzing. \n",
     "\n",
     "Next data to import is the `fid` tables from `results.csv`"
    ]
