--- a/gc_area_analysis.ipynb
+++ b/gc_area_analysis.ipynb
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -252,44 +252,44 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>library_id</th>\n",
        "      <th>FA03.D</th>\n",
        "      <th>FA04.D</th>\n",
        "      <th>FA05.D</th>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>library_id</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Methyl octanoate</th>\n",
+       "      <th>0</th>\n",
+       "      <td>Methyl octanoate</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.5</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Methyl decanoate</th>\n",
+       "      <th>1</th>\n",
+       "      <td>Methyl decanoate</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.5</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Methyl undecanoate</th>\n",
+       "      <th>2</th>\n",
+       "      <td>Methyl undecanoate</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.5</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Methyl dodecanoate</th>\n",
+       "      <th>3</th>\n",
+       "      <td>Methyl dodecanoate</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.5</td>\n",
        "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Methyl tridecanoate</th>\n",
+       "      <th>4</th>\n",
+       "      <td>Methyl tridecanoate</td>\n",
        "      <td>0.25</td>\n",
        "      <td>0.5</td>\n",
        "      <td>1.0</td>\n",
@@ -299,16 +299,15 @@
        "</div>"
       ],
       "text/plain": [
-       "                     FA03.D  FA04.D  FA05.D\n",
-       "library_id                                 \n",
-       "Methyl octanoate       0.25     0.5     1.0\n",
-       "Methyl decanoate       0.25     0.5     1.0\n",
-       "Methyl undecanoate     0.25     0.5     1.0\n",
-       "Methyl dodecanoate     0.25     0.5     1.0\n",
-       "Methyl tridecanoate    0.25     0.5     1.0"
+       "            library_id  FA03.D  FA04.D  FA05.D\n",
+       "0     Methyl octanoate    0.25     0.5     1.0\n",
+       "1     Methyl decanoate    0.25     0.5     1.0\n",
+       "2   Methyl undecanoate    0.25     0.5     1.0\n",
+       "3   Methyl dodecanoate    0.25     0.5     1.0\n",
+       "4  Methyl tridecanoate    0.25     0.5     1.0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,7 +319,7 @@
     "\n",
     "for key,val in cal_dilutions.items():\n",
     "    cal_conc_df[key] = cal_conc_df['Conc_0']*val\n",
-    "cal_conc_df.set_index(['library_id'],inplace=True)\n",
+    "# cal_conc_df.set_index(['library_id'],inplace=True)\n",
     "cal_conc_df.drop('Conc_0',1,inplace=True)\n",
     "cal_conc_df.head()"
    ]
@@ -334,25 +333,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>header=</th>\n",
+       "      <th>pk</th>\n",
+       "      <th>rt</th>\n",
+       "      <th>pct_area</th>\n",
+       "      <th>library_id</th>\n",
+       "      <th>ref</th>\n",
+       "      <th>cas</th>\n",
+       "      <th>qual</th>\n",
+       "      <th>key</th>\n",
+       "      <th>tic_area</th>\n",
+       "      <th>cal_conc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1=</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.7877</td>\n",
+       "      <td>2.0335</td>\n",
+       "      <td>Methyl octanoate</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>000000-00-0</td>\n",
+       "      <td>96.0</td>\n",
+       "      <td>FA03.D</td>\n",
+       "      <td>1489466.0</td>\n",
+       "      <td>0.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2=</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>7.3441</td>\n",
+       "      <td>3.4015</td>\n",
+       "      <td>Methyl decanoate</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>000000-00-0</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>FA03.D</td>\n",
+       "      <td>2491449.0</td>\n",
+       "      <td>0.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3=</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>8.0364</td>\n",
+       "      <td>1.7448</td>\n",
+       "      <td>Methyl undecanoate</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>000000-00-0</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>FA03.D</td>\n",
+       "      <td>1277982.0</td>\n",
+       "      <td>0.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4=</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>8.6715</td>\n",
+       "      <td>3.9674</td>\n",
+       "      <td>Methyl dodecanoate</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>000000-00-0</td>\n",
+       "      <td>98.0</td>\n",
+       "      <td>FA03.D</td>\n",
+       "      <td>2905961.0</td>\n",
+       "      <td>0.25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5=</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>9.2781</td>\n",
+       "      <td>1.9607</td>\n",
+       "      <td>Methyl tridecanoate</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>000000-00-0</td>\n",
+       "      <td>99.0</td>\n",
+       "      <td>FA03.D</td>\n",
+       "      <td>1436154.0</td>\n",
+       "      <td>0.25</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   index header=   pk      rt  pct_area           library_id   ref  \\\n",
+       "0      0      1=  1.0  5.7877    2.0335     Methyl octanoate  17.0   \n",
+       "1      1      2=  2.0  7.3441    3.4015     Methyl decanoate   1.0   \n",
+       "2      2      3=  3.0  8.0364    1.7448   Methyl undecanoate   2.0   \n",
+       "3      3      4=  4.0  8.6715    3.9674   Methyl dodecanoate   3.0   \n",
+       "4      4      5=  5.0  9.2781    1.9607  Methyl tridecanoate   4.0   \n",
+       "\n",
+       "           cas  qual     key   tic_area  cal_conc  \n",
+       "0  000000-00-0  96.0  FA03.D  1489466.0      0.25  \n",
+       "1  000000-00-0  98.0  FA03.D  2491449.0      0.25  \n",
+       "2  000000-00-0  98.0  FA03.D  1277982.0      0.25  \n",
+       "3  000000-00-0  98.0  FA03.D  2905961.0      0.25  \n",
+       "4  000000-00-0  99.0  FA03.D  1436154.0      0.25  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def calc_calibration(matched_df, cal_conc_df):\n",
-    "    pass"
+    "def match_cal_conc(matched_df, cal_conc_df):\n",
+    "    cal_conc_df_melted = pd.melt(cal_conc_df, id_vars=['library_id'],value_vars=cal_files)\n",
+    "    cal_conc_df_melted.columns = ['library_id','key','cal_conc']\n",
+    "    \n",
+    "    return_df = pd.merge(matched_df,cal_conc_df_melted,how='left',on=['library_id','key'])\n",
+    "    return return_df.dropna(subset=['cal_conc'])\n",
+    "\n",
+    "match_cal_conc(matched_df, cal_conc_df).head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "species = 'Methyl octanoate'\n"
+    "# cal_conc_df_melted = pd.melt(cal_conc_df, id_vars=['library_id'],value_vars=cal_files)\n",
+    "# cal_conc_df_melted.columns = ['library_id','key','cal_conc']\n",
+    "# return_df = pd.merge(matched_df,cal_conc_df_melted,how='left',on=['library_id','key'])\n",
+    "# return_df.dropna(subset=['cal_conc'],inplace=True)\n",
+    "# return_df"
    ]
   },
   {
@@ -364,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
