--- a/example.ipynb
+++ b/example.ipynb
@@ -24,7 +24,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from chemtbd.io import Agilent"
@@ -46,7 +48,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "agi = Agilent.from_root('data/test3')"
@@ -94,130 +98,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>header=</th>\n",
-       "      <th>peak</th>\n",
-       "      <th>rt</th>\n",
-       "      <th>first</th>\n",
-       "      <th>max</th>\n",
-       "      <th>last</th>\n",
-       "      <th>pk_ty</th>\n",
-       "      <th>height</th>\n",
-       "      <th>area</th>\n",
-       "      <th>pct_max</th>\n",
-       "      <th>pct_total</th>\n",
-       "      <th>key</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1=</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>12.288</td>\n",
-       "      <td>1600.0</td>\n",
-       "      <td>1609.0</td>\n",
-       "      <td>1647.0</td>\n",
-       "      <td>rBV3</td>\n",
-       "      <td>71023.0</td>\n",
-       "      <td>478771.0</td>\n",
-       "      <td>39.71</td>\n",
-       "      <td>6.909</td>\n",
-       "      <td>FA01.D</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2=</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>13.598</td>\n",
-       "      <td>1830.0</td>\n",
-       "      <td>1838.0</td>\n",
-       "      <td>1864.0</td>\n",
-       "      <td>rBV2</td>\n",
-       "      <td>247725.0</td>\n",
-       "      <td>825285.0</td>\n",
-       "      <td>68.46</td>\n",
-       "      <td>11.910</td>\n",
-       "      <td>FA01.D</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3=</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>14.428</td>\n",
-       "      <td>1977.0</td>\n",
-       "      <td>1983.0</td>\n",
-       "      <td>2004.0</td>\n",
-       "      <td>rBV</td>\n",
-       "      <td>481706.0</td>\n",
-       "      <td>1098175.0</td>\n",
-       "      <td>91.09</td>\n",
-       "      <td>15.848</td>\n",
-       "      <td>FA01.D</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4=</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>15.080</td>\n",
-       "      <td>2091.0</td>\n",
-       "      <td>2097.0</td>\n",
-       "      <td>2109.0</td>\n",
-       "      <td>rBV</td>\n",
-       "      <td>806692.0</td>\n",
-       "      <td>1205528.0</td>\n",
-       "      <td>100.00</td>\n",
-       "      <td>17.397</td>\n",
-       "      <td>FA01.D</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5=</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>15.692</td>\n",
-       "      <td>2198.0</td>\n",
-       "      <td>2204.0</td>\n",
-       "      <td>2215.0</td>\n",
-       "      <td>rBV</td>\n",
-       "      <td>731146.0</td>\n",
-       "      <td>1085862.0</td>\n",
-       "      <td>90.07</td>\n",
-       "      <td>15.670</td>\n",
-       "      <td>FA01.D</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  header=  peak      rt   first     max    last pk_ty    height       area  \\\n",
-       "0      1=   1.0  12.288  1600.0  1609.0  1647.0  rBV3   71023.0   478771.0   \n",
-       "1      2=   2.0  13.598  1830.0  1838.0  1864.0  rBV2  247725.0   825285.0   \n",
-       "2      3=   3.0  14.428  1977.0  1983.0  2004.0  rBV   481706.0  1098175.0   \n",
-       "3      4=   4.0  15.080  2091.0  2097.0  2109.0  rBV   806692.0  1205528.0   \n",
-       "4      5=   5.0  15.692  2198.0  2204.0  2215.0  rBV   731146.0  1085862.0   \n",
-       "\n",
-       "   pct_max  pct_total     key  \n",
-       "0    39.71      6.909  FA01.D  \n",
-       "1    68.46     11.910  FA01.D  \n",
-       "2    91.09     15.848  FA01.D  \n",
-       "3   100.00     17.397  FA01.D  \n",
-       "4    90.07     15.670  FA01.D  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'agi' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-45f64238a78c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0magi\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mresults\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'tic'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'agi' is not defined"
+     ]
     }
    ],
    "source": [
