--- a/gc_area_analysis.ipynb
+++ b/gc_area_analysis.ipynb
@@ -9,6 +9,7 @@
    "outputs": [],
    "source": [
     "from chemtbd.io import Agilent\n",
+    "from scipy.stats import linregress\n",
     "import numpy as np\n",
     "import pandas as pd"
    ]
@@ -333,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -344,152 +345,163 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>header=</th>\n",
-       "      <th>pk</th>\n",
-       "      <th>rt</th>\n",
-       "      <th>pct_area</th>\n",
        "      <th>library_id</th>\n",
-       "      <th>ref</th>\n",
-       "      <th>cas</th>\n",
-       "      <th>qual</th>\n",
-       "      <th>key</th>\n",
-       "      <th>tic_area</th>\n",
-       "      <th>cal_conc</th>\n",
+       "      <th>slope</th>\n",
+       "      <th>intercept</th>\n",
+       "      <th>rvalue</th>\n",
+       "      <th>pvalue</th>\n",
+       "      <th>stderr</th>\n",
+       "      <th>max</th>\n",
+       "      <th>min</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1=</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.7877</td>\n",
-       "      <td>2.0335</td>\n",
-       "      <td>Methyl octanoate</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>000000-00-0</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>FA03.D</td>\n",
-       "      <td>1489466.0</td>\n",
-       "      <td>0.25</td>\n",
+       "      <td>All cis-4,7,10,13,16,19-docosahexaenoate methy...</td>\n",
+       "      <td>1.367304e-07</td>\n",
+       "      <td>0.103774</td>\n",
+       "      <td>0.999932</td>\n",
+       "      <td>0.007421</td>\n",
+       "      <td>1.593827e-09</td>\n",
+       "      <td>6566581.0</td>\n",
+       "      <td>1094384.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2=</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>7.3441</td>\n",
-       "      <td>3.4015</td>\n",
-       "      <td>Methyl decanoate</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>000000-00-0</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>FA03.D</td>\n",
-       "      <td>2491449.0</td>\n",
-       "      <td>0.25</td>\n",
+       "      <td>Methyl arachidate</td>\n",
+       "      <td>7.146232e-08</td>\n",
+       "      <td>-0.063537</td>\n",
+       "      <td>0.999076</td>\n",
+       "      <td>0.027367</td>\n",
+       "      <td>3.073928e-09</td>\n",
+       "      <td>14785000.0</td>\n",
+       "      <td>4222622.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>3=</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>8.0364</td>\n",
-       "      <td>1.7448</td>\n",
-       "      <td>Methyl undecanoate</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>000000-00-0</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>FA03.D</td>\n",
-       "      <td>1277982.0</td>\n",
-       "      <td>0.25</td>\n",
+       "      <td>Methyl arachidonate</td>\n",
+       "      <td>1.344684e-07</td>\n",
+       "      <td>0.067813</td>\n",
+       "      <td>0.999319</td>\n",
+       "      <td>0.000681</td>\n",
+       "      <td>3.511120e-09</td>\n",
+       "      <td>7056294.0</td>\n",
+       "      <td>1390417.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>4=</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>8.6715</td>\n",
-       "      <td>3.9674</td>\n",
-       "      <td>Methyl dodecanoate</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>000000-00-0</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>FA03.D</td>\n",
-       "      <td>2905961.0</td>\n",
-       "      <td>0.25</td>\n",
+       "      <td>Methyl cis-11-eicosenoate</td>\n",
+       "      <td>6.336257e-08</td>\n",
+       "      <td>0.008515</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>0.000110</td>\n",
+       "      <td>1.092154e-11</td>\n",
+       "      <td>15647413.0</td>\n",
+       "      <td>3810380.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>5=</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>9.2781</td>\n",
-       "      <td>1.9607</td>\n",
-       "      <td>Methyl tridecanoate</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>000000-00-0</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>FA03.D</td>\n",
-       "      <td>1436154.0</td>\n",
-       "      <td>0.25</td>\n",
+       "      <td>Methyl cis-5,8,11,14,17-Eicosopentaenoate</td>\n",
+       "      <td>1.304701e-07</td>\n",
+       "      <td>0.086535</td>\n",
+       "      <td>0.998149</td>\n",
+       "      <td>0.038744</td>\n",
+       "      <td>7.950033e-09</td>\n",
+       "      <td>6922358.0</td>\n",
+       "      <td>1128019.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   index header=   pk      rt  pct_area           library_id   ref  \\\n",
-       "0      0      1=  1.0  5.7877    2.0335     Methyl octanoate  17.0   \n",
-       "1      1      2=  2.0  7.3441    3.4015     Methyl decanoate   1.0   \n",
-       "2      2      3=  3.0  8.0364    1.7448   Methyl undecanoate   2.0   \n",
-       "3      3      4=  4.0  8.6715    3.9674   Methyl dodecanoate   3.0   \n",
-       "4      4      5=  5.0  9.2781    1.9607  Methyl tridecanoate   4.0   \n",
+       "                                          library_id         slope  intercept  \\\n",
+       "0  All cis-4,7,10,13,16,19-docosahexaenoate methy...  1.367304e-07   0.103774   \n",
+       "1                                  Methyl arachidate  7.146232e-08  -0.063537   \n",
+       "2                                Methyl arachidonate  1.344684e-07   0.067813   \n",
+       "3                          Methyl cis-11-eicosenoate  6.336257e-08   0.008515   \n",
+       "4          Methyl cis-5,8,11,14,17-Eicosopentaenoate  1.304701e-07   0.086535   \n",
        "\n",
-       "           cas  qual     key   tic_area  cal_conc  \n",
-       "0  000000-00-0  96.0  FA03.D  1489466.0      0.25  \n",
-       "1  000000-00-0  98.0  FA03.D  2491449.0      0.25  \n",
-       "2  000000-00-0  98.0  FA03.D  1277982.0      0.25  \n",
-       "3  000000-00-0  98.0  FA03.D  2905961.0      0.25  \n",
-       "4  000000-00-0  99.0  FA03.D  1436154.0      0.25  "
+       "     rvalue    pvalue        stderr         max        min  \n",
+       "0  0.999932  0.007421  1.593827e-09   6566581.0  1094384.0  \n",
+       "1  0.999076  0.027367  3.073928e-09  14785000.0  4222622.0  \n",
+       "2  0.999319  0.000681  3.511120e-09   7056294.0  1390417.0  \n",
+       "3  1.000000  0.000110  1.092154e-11  15647413.0  3810380.0  \n",
+       "4  0.998149  0.038744  7.950033e-09   6922358.0  1128019.0  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def match_cal_conc(matched_df, cal_conc_df):\n",
+    "    '''\n",
+    "    this  function takes a dataframe which contains species matched to an area (matched_df) \n",
+    "    and a calibration concentration dataframe and matches these two pased on library_id\n",
+    "    '''\n",
     "    cal_conc_df_melted = pd.melt(cal_conc_df, id_vars=['library_id'],value_vars=cal_files)\n",
     "    cal_conc_df_melted.columns = ['library_id','key','cal_conc']\n",
     "    \n",
     "    return_df = pd.merge(matched_df,cal_conc_df_melted,how='left',on=['library_id','key'])\n",
     "    return return_df.dropna(subset=['cal_conc'])\n",
     "\n",
-    "match_cal_conc(matched_df, cal_conc_df).head()"
+    "matched_cal_conc = match_cal_conc(matched_df, cal_conc_df)\n",
+    "\n",
+    "def cal_curves_tic(matched_cal_conc):\n",
+    "    '''\n",
+    "    this function takes a matched calibration concentration dataframe (matched_cal_conc)\n",
+    "    and does a linear regression and returns a dataframe of the library_ids with \n",
+    "    linregress stats and the min/max areas which is the range for which the calibration\n",
+    "    curve can (should only) be used.\n",
+    "    \n",
+    "    this is only for tic data, fid data calculation will be different\n",
+    "    '''\n",
+    "    b = (matched_cal_conc.groupby('library_id')\n",
+    "                         .apply(lambda a: linregress(a.tic_area,a.cal_conc))\n",
+    "                         .apply(pd.Series)\n",
+    "                         .reset_index())\n",
+    "    b.columns = ['library_id','slope','intercept','rvalue','pvalue','stderr']\n",
+    "    d = pd.DataFrame({'max':matched_cal_conc.groupby('library_id')['tic_area'].max(),\n",
+    "                     'min':matched_cal_conc.groupby('library_id')['tic_area'].min()}).reset_index()\n",
+    "    return b.merge(d,on=['library_id'])\n",
+    "\n",
+    "calced_curves = cal_curves_tic(matched_cal_conc).head()\n",
+    "calced_curves.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['library_id', 'slope', 'intercept', 'rvalue', 'pvalue', 'stderr', 'max',\n",
+       "       'min'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# cal_conc_df_melted = pd.melt(cal_conc_df, id_vars=['library_id'],value_vars=cal_files)\n",
-    "# cal_conc_df_melted.columns = ['library_id','key','cal_conc']\n",
-    "# return_df = pd.merge(matched_df,cal_conc_df_melted,how='left',on=['library_id','key'])\n",
-    "# return_df.dropna(subset=['cal_conc'],inplace=True)\n",
-    "# return_df"
+    "def calc_conc_tic(cal_curves, matched_df):\n",
+    "    '''\n",
+    "    this  function takes a dataframe which contains species matched to an area (matchlib2area_all) \n",
+    "    and a calibration curve dataframe (cal_curves_tic)\n",
+    "    '''\n",
+    "\n",
+    "    returnDF = matched_df.merge(cal_curves,on = ['library_id'])\n",
+    "    returnDF['Conc'] = returnDF.slope*returnDF.tic_area+returnDF.intercept\n",
+    "    returnDF = lical_curves.columns\n",
+    "    return returnDF\n",
+    "calc_conc_tic(calced_curves,matched_df)"
    ]
   },
   {
@@ -507,8 +519,7 @@
    },
    "outputs": [],
    "source": [
-    "def calc_conc():\n",
-    "    pass\n",
+    "\n",
     "\n",
     "def calc_mass():\n",
     "    pass\n",
