init implementation of reading additional ms data.  needs review to figure out wth is being returned

--- a/gc_area_analysis.ipynb
+++ b/gc_area_analysis.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from chemtbd.io import Agilent\n",
@@ -16,13 +18,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "agi = Agilent.from_root('data')"
+    "agi = Agilent.from_root('data/test3')"
    ]
   },
   {
@@ -55,14 +55,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FA14_2.D did not match successfully\n"
+      "FA03.D, cannot do slice indexing on <class 'pandas.indexes.base.Index'> with these indexers [28] of <class 'int'>\n",
+      "FA04.D, cannot do slice indexing on <class 'pandas.indexes.base.Index'> with these indexers [30] of <class 'int'>\n",
+      "FA05.D, cannot do slice indexing on <class 'pandas.indexes.base.Index'> with these indexers [31] of <class 'int'>\n",
+      "FA08.D, cannot do slice indexing on <class 'pandas.indexes.base.Index'> with these indexers [2] of <class 'int'>\n",
+      "FA09.D, cannot do slice indexing on <class 'pandas.indexes.base.Index'> with these indexers [2] of <class 'int'>\n",
+      "FA11.D, cannot do slice indexing on <class 'pandas.indexes.base.Index'> with these indexers [6] of <class 'int'>\n",
+      "FA12.D, cannot do slice indexing on <class 'pandas.indexes.base.Index'> with these indexers [6] of <class 'int'>\n",
+      "FA13.D, cannot do slice indexing on <class 'pandas.indexes.base.Index'> with these indexers [8] of <class 'int'>\n",
+      "FA14.D, cannot do slice indexing on <class 'pandas.indexes.base.Index'> with these indexers [7] of <class 'int'>\n"
      ]
     },
     {
@@ -74,127 +82,31 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>index</th>\n",
-       "      <th>header=</th>\n",
-       "      <th>pk</th>\n",
-       "      <th>rt</th>\n",
-       "      <th>pct_area</th>\n",
-       "      <th>library_id</th>\n",
-       "      <th>ref</th>\n",
-       "      <th>cas</th>\n",
-       "      <th>qual</th>\n",
-       "      <th>key</th>\n",
-       "      <th>tic_area</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1=</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>5.7877</td>\n",
-       "      <td>2.0335</td>\n",
-       "      <td>Methyl octanoate</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>000000-00-0</td>\n",
-       "      <td>96.0</td>\n",
-       "      <td>FA03.D</td>\n",
-       "      <td>1489466.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2=</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>7.3441</td>\n",
-       "      <td>3.4015</td>\n",
-       "      <td>Methyl decanoate</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>000000-00-0</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>FA03.D</td>\n",
-       "      <td>2491449.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>3=</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>8.0364</td>\n",
-       "      <td>1.7448</td>\n",
-       "      <td>Methyl undecanoate</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>000000-00-0</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>FA03.D</td>\n",
-       "      <td>1277982.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>4=</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>8.6715</td>\n",
-       "      <td>3.9674</td>\n",
-       "      <td>Methyl dodecanoate</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>000000-00-0</td>\n",
-       "      <td>98.0</td>\n",
-       "      <td>FA03.D</td>\n",
-       "      <td>2905961.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>5=</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>9.2781</td>\n",
-       "      <td>1.9607</td>\n",
-       "      <td>Methyl tridecanoate</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>000000-00-0</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>FA03.D</td>\n",
-       "      <td>1436154.0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   index header=   pk      rt  pct_area           library_id   ref  \\\n",
-       "0      0      1=  1.0  5.7877    2.0335     Methyl octanoate  17.0   \n",
-       "1      1      2=  2.0  7.3441    3.4015     Methyl decanoate   1.0   \n",
-       "2      2      3=  3.0  8.0364    1.7448   Methyl undecanoate   2.0   \n",
-       "3      3      4=  4.0  8.6715    3.9674   Methyl dodecanoate   3.0   \n",
-       "4      4      5=  5.0  9.2781    1.9607  Methyl tridecanoate   4.0   \n",
-       "\n",
-       "           cas  qual     key   tic_area  \n",
-       "0  000000-00-0  96.0  FA03.D  1489466.0  \n",
-       "1  000000-00-0  98.0  FA03.D  2491449.0  \n",
-       "2  000000-00-0  98.0  FA03.D  1277982.0  \n",
-       "3  000000-00-0  98.0  FA03.D  2905961.0  \n",
-       "4  000000-00-0  99.0  FA03.D  1436154.0  "
+       "Empty DataFrame\n",
+       "Columns: [index]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def matchlib2area_one(key,libdf, areadf,areatype):\n",
+    "def matchlib2area_one(key, libdf, areadf, areatype):\n",
     "    returndf = libdf.copy()\n",
     "    \n",
-    "    if areatype == 'tic':\n",
-    "        colname = 'tic_area'\n",
-    "    elif areatype == 'fid':\n",
-    "        colname = 'fid_area'\n",
-    "    else:\n",
-    "        print('incorrect area type')\n",
-    "\n",
+    "    colname = '{}_area'.format(areatype.replace('results_', ''))\n",
     "    returndf[colname] = np.nan\n",
-    "    #find shortest\n",
+    "\n",
     "    if len(libdf) <= len(areadf):\n",
     "        short = libdf\n",
     "        long = areadf\n",
@@ -202,34 +114,33 @@
     "        short = areadf\n",
     "        long = libdf\n",
     "        \n",
-    "    #loop and match\n",
+    "#     #loop and match\n",
     "    match_list = []\n",
     "    for index,row in short.iterrows():\n",
     "        sqrError = (short['rt'].ix[index]-long['rt'].ix[index:len(long)])**2    \n",
     "        area_row = sqrError.idxmin(axis=1)\n",
     "        match_list.append(areadf['area'].ix[area_row])\n",
-    "    if areatype == 'tic':\n",
-    "        returndf['tic_area'] = match_list\n",
-    "    elif areatype == 'fid':\n",
-    "        returndf['fid_area'] = match_list\n",
+    "\n",
+    "#     returndf[colname] = match_list\n",
+    "\n",
     "    \n",
-    "    return returndf\n",
+    "    return short\n",
     "\n",
-    "def matchlib2area_all(data_dic,areatype='tic'):\n",
-    "    libdf = data_dic.results('lib').groupby('key')\n",
-    "    areadf  = data_dic.results(areatype).groupby('key')\n",
+    "def matchlib2area_all(agi, areatype='results_tic'):\n",
+    "    '''\n",
+    "    '''\n",
+    "    libdf = agi.results_lib.groupby(level=0)\n",
+    "    areadf = getattr(agi, areatype).groupby(level=0)\n",
     "\n",
-    "    #return_dic = {}\n",
     "    return_df = pd.DataFrame()\n",
     "    for name, group in libdf:\n",
     "        try:\n",
-    "            return_df = return_df.append(matchlib2area_one(name,group,areadf.get_group(name),areatype))\n",
-    "            # return_dic[name] = matchlib2area_one(name,group,areadf.get_group(name),areatype)\n",
-    "        except:\n",
-    "            print(name+' did not match successfully')\n",
+    "            return_df = return_df.append(matchlib2area_one(name, group, areadf.get_group(name), areatype))\n",
+    "        except Exception as e:\n",
+    "            print('{}, {}'.format(name, e))\n",
     "    return return_df.reset_index()\n",
     "\n",
-    "matched_df = matchlib2area_all(agi,'tic')\n",
+    "matched_df = matchlib2area_all(agi, 'results_tic')\n",
     "matched_df.head()"
    ]
   },
