remove gc_area_analysis to avoid conflicts with other branch.  add example notevook with gcms_data chromatogram read

--- a/example.ipynb
+++ b/example.ipynb
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,9 +252,196 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>204.9</th>\n",
+       "      <th>52.1</th>\n",
+       "      <th>155.0</th>\n",
+       "      <th>104.1</th>\n",
+       "      <th>53.1</th>\n",
+       "      <th>207.0</th>\n",
+       "      <th>155.8</th>\n",
+       "      <th>105.0</th>\n",
+       "      <th>54.1</th>\n",
+       "      <th>207.9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>326.6</th>\n",
+       "      <th>251.2</th>\n",
+       "      <th>316.2</th>\n",
+       "      <th>354.4</th>\n",
+       "      <th>331.6</th>\n",
+       "      <th>105.7</th>\n",
+       "      <th>268.5</th>\n",
+       "      <th>122.1</th>\n",
+       "      <th>202.2</th>\n",
+       "      <th>126.7</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>3.086817</th>\n",
+       "      <td>185.0</td>\n",
+       "      <td>8090.0</td>\n",
+       "      <td>225.0</td>\n",
+       "      <td>166.0</td>\n",
+       "      <td>40736.0</td>\n",
+       "      <td>1851.0</td>\n",
+       "      <td>193.0</td>\n",
+       "      <td>365.0</td>\n",
+       "      <td>21416.0</td>\n",
+       "      <td>313.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3.092533</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6851.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>32048.0</td>\n",
+       "      <td>2084.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>17080.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3.098250</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5660.0</td>\n",
+       "      <td>203.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>24736.0</td>\n",
+       "      <td>1931.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>568.0</td>\n",
+       "      <td>15641.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3.103983</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4772.0</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>205.0</td>\n",
+       "      <td>23920.0</td>\n",
+       "      <td>2675.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>14445.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3.109700</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4327.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>218.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2216.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>506.0</td>\n",
+       "      <td>13051.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 2057 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          204.9   52.1   155.0  104.1    53.1    207.0  155.8  105.0    54.1   \\\n",
+       "3.086817  185.0  8090.0  225.0  166.0  40736.0  1851.0  193.0  365.0  21416.0   \n",
+       "3.092533    0.0  6851.0    0.0    0.0  32048.0  2084.0    0.0    0.0  17080.0   \n",
+       "3.098250    0.0  5660.0  203.0    0.0  24736.0  1931.0    0.0  568.0  15641.0   \n",
+       "3.103983    0.0  4772.0  210.0  205.0  23920.0  2675.0    0.0    0.0  14445.0   \n",
+       "3.109700    0.0  4327.0    0.0  218.0      0.0  2216.0    0.0  506.0  13051.0   \n",
+       "\n",
+       "          207.9  ...    326.6  251.2  316.2  354.4  331.6  105.7  268.5  \\\n",
+       "3.086817  313.0  ...      0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+       "3.092533    0.0  ...      0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+       "3.098250    0.0  ...      0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+       "3.103983    0.0  ...      0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+       "3.109700    0.0  ...      0.0    0.0    0.0    0.0    0.0    0.0    0.0   \n",
+       "\n",
+       "          122.1  202.2  126.7  \n",
+       "3.086817    0.0    0.0    0.0  \n",
+       "3.092533    0.0    0.0    0.0  \n",
+       "3.098250    0.0    0.0    0.0  \n",
+       "3.103983    0.0    0.0    0.0  \n",
+       "3.109700    0.0    0.0    0.0  \n",
+       "\n",
+       "[5 rows x 2057 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "chrom.head()"
    ]
