--- a/matching.ipynb
+++ b/matching.ipynb
@@ -41,7 +41,9 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def find_match(x, Y):\n",
@@ -52,10 +54,7 @@
     "    def score(y):\n",
     "        u = (x - y)**2\n",
     "        return u if u < threshold else np.nan\n",
-    "\n",
-    "    return_value = Y.apply(score).idxmin()\n",
-    "    return return_value\n",
-    "    return return_value\n",
+    "    return = Y.apply(score).idxmin()\n",
     "\n",
     "def _rt_match(lib_row, rt):\n",
     "    ''' find closest rt\n",
@@ -84,7 +83,9 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -569,7 +570,9 @@
   {
    "cell_type": "code",
    "execution_count": 161,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "data": {
@@ -780,7 +783,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
