changed io to build, created analyze

--- a/example_agilent.ipynb
+++ b/example_agilent.ipynb
@@ -29,7 +29,7 @@
    },
    "outputs": [],
    "source": [
-    "from chemtbd.io import Agilent"
+    "from chemtbd.build import Agilent"
    ]
   },
   {
@@ -49,6 +49,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -193,12 +194,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from chemtbd.io import GcmsData"
+    "from chemtbd.build import GcmsData"
    ]
   },
   {
