--- a/example_gcquant.ipynb
+++ b/example_gcquant.ipynb
@@ -32,12 +32,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from chemtbd.io import Agilent\n",
+    "from chemtbd.build import Agilent\n",
     "agi = Agilent.from_root('data/test3')\n",
     "\n",
     "lib = agi.results_lib\n",
@@ -114,7 +112,7 @@
    },
    "outputs": [],
    "source": [
-    "from chemtbd.io import GCQuant\n",
+    "from chemtbd.analyze import GCQuant\n",
     "gcq = GCQuant(lib,area,standards)"
    ]
   },
