--- a/chromo_example.ipynb
+++ b/chromo_example.ipynb
@@ -24,12 +24,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from chemtbd.io import Agilent"
+    "from chemtbd.build import Agilent"
    ]
   },
   {
@@ -49,6 +47,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -198,7 +197,7 @@
    },
    "outputs": [],
    "source": [
-    "from chemtbd.io import GcmsData"
+    "from chemtbd.build import GcmsData"
    ]
   },
   {
