--- a/chromo_example.ipynb
+++ b/chromo_example.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from chemtbd.build import Agilent"
+    "from valence.build import Agilent"
    ]
   },
   {
@@ -192,12 +192,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from chemtbd.build import GcmsData"
+    "from valence.build import GcmsData"
    ]
   },
   {
