--- a/example_agilent.ipynb
+++ b/example_agilent.ipynb
@@ -29,7 +29,7 @@
    },
    "outputs": [],
    "source": [
-    "from chemtbd.build import Agilent"
+    "from valence.build import Agilent"
    ]
   },
   {
@@ -194,10 +194,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "from chemtbd.build import GcmsData"
+    "from valence.build import GcmsData"
    ]
   },
   {
