update docstring content

--- a/chromo_example.ipynb
+++ b/chromo_example.ipynb
@@ -27,7 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from valence.build import Agilent"
+    "from valence.build import AgilentGcms"
    ]
   },
   {
@@ -47,12 +47,11 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "agi = Agilent.from_root('data/test3')"
+    "agi = AgilentGcms.from_root('data/test3')"
    ]
   },
   {
@@ -71,6 +70,15 @@
    "outputs": [],
    "source": [
     "agi.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "agi.datams.index.name"
    ]
   },
   {
@@ -195,7 +203,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from valence.build import GcmsData"
+    "from valence.build import GcmsDataMs"
    ]
   },
   {
@@ -208,20 +216,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "gcms_data = GcmsData('data/test3/FA01.d/DATA.MS')"
+    "gcms_data = GcmsDataMs('data/test3/FA01.d/DATA.MS')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "chrom = gcms_data.chromatogram"
@@ -297,6 +301,15 @@
    "source": [
     "A common feature of software that manipulates this data is that someone could click on a timepoint in the first plot and get a display of the second plot. Or have someway to specify a timepoint for which i want to see the ion profile."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
